# XRO

./: .gitignore  README.md  build.sh  pyproject.toml
.github/workflows/: publish.yml
XRO/: __init__.py  core.py  state.py  stats.py  visual.py
code/: RO_parctical_with_XRO_framework.ipynb  XRO.py  XRO_Cookbook.ipynb  XRO_utils.py
data/: XRO_indices_oras5.nc  indices_oras5.nc
notebooks/: XRO_Cookbook.ipynb  XRO_States.ipynb  XRO_realtime_states_forecasts.ipynb
